@@ -15,10 +15,11 @@ except NameError:
     from sets import Set as set
 
 import re
-from pygments.token import String, Comment, Keyword, Name, Error, \
+from pygments.token import String, Comment, Keyword, Name, Error, Whitespace, \
     string_to_tokentype
 from pygments.filter import Filter
-from pygments.util import get_list_opt, ClassNotFound
+from pygments.util import get_list_opt, get_int_opt, get_bool_opt, \
+     ClassNotFound, OptionError
 from pygments.plugin import find_plugin_filters
 
 
@@ -56,14 +57,30 @@ def get_all_filters():
         yield name
 
 
+def _replace_special(ttype, value, regex, specialttype,
+                     replacefunc=lambda x: x):
+    last = 0
+    for match in regex.finditer(value):
+        start, end = match.start(), match.end()
+        if start != last:
+            yield ttype, value[last:start]
+        yield specialttype, replacefunc(value[start:end])
+        last = end
+    if last != len(value):
+        yield ttype, value[last:]
+
+
 class CodeTagFilter(Filter):
     """
     Highlight special code tags in comments and docstrings.
 
-    Per default, the list of highlighted tags is ``XXX``, ``TODO``, ``BUG`` and
-    ``NOTE``. You can override this list by specifying a `codetags` parameter
-    that takes a list of words.
+    Options accepted:
+
+    `codetags` : list of strings
+       A list of strings that are flagged as code tags.  The default is to
+       highlight ``XXX``, ``TODO``, ``BUG`` and ``NOTE``.
     """
+
     def __init__(self, **options):
         Filter.__init__(self, **options)
         tags = get_list_opt(options, 'codetags',
@@ -73,39 +90,38 @@ class CodeTagFilter(Filter):
         ]))
 
     def filter(self, lexer, stream):
+        regex = self.tag_re
         for ttype, value in stream:
             if ttype in String.Doc or \
                ttype in Comment and \
                ttype not in Comment.Preproc:
-                last = 0
-                for match in self.tag_re.finditer(value):
-                    start = match.start()
-                    end = match.end()
-                    if start != last:
-                        yield ttype, value[last:start]
-                    yield Comment.Special, value[start:end]
-                    last = end
-                if last != len(value):
-                    yield ttype, value[last:]
-                continue
-            yield ttype, value
+                for sttype, svalue in _replace_special(ttype, value, regex,
+                                                       Comment.Special):
+                    yield sttype, svalue
+            else:
+                yield ttype, value
 
 
 class KeywordCaseFilter(Filter):
     """
-    Convert keywords to ``lower``, ``upper`` or ``capitalize`` which means
-    first letter uppercase, rest lowercase.
+    Convert keywords to lowercase or uppercase or capitalize them, which
+    means first letter uppercase, rest lowercase.
 
     This can be useful e.g. if you highlight Pascal code and want to adapt the
-    code to your styleguide. The default is ``lower``, override that by
-    providing the `case` parameter.
+    code to your styleguide.
+
+    Options accepted:
+
+    `case` : string
+       The casing to convert keywords to. Must be one of ``'lower'``,
+       ``'upper'`` or ``'capitalize'``.  The default is ``'lower'``.
     """
 
     def __init__(self, **options):
         Filter.__init__(self, **options)
         case = options.get('case', 'lower')
         if case not in ('lower', 'upper', 'capitalize'):
-            raise TypeError('unknown conversion method %r' % case)
+            raise OptionError('unknown conversion method %r' % case)
         self.convert = getattr(unicode, case)
 
     def filter(self, lexer, stream):
@@ -129,6 +145,16 @@ class NameHighlightFilter(Filter):
 
     This would highlight the names "foo", "bar" and "baz"
     as functions. `Name.Function` is the default token type.
+
+    Options accepted:
+
+    `names` : list of strings
+      A list of names that should be given the different token type.
+      There is no default.
+    `tokentype` : TokenType or string
+      A token type or a string containing a token type name that is
+      used for highlighting the strings in `names`.  The default is
+      `Name.Function`.
     """
 
     def __init__(self, **options):
@@ -153,17 +179,109 @@ class ErrorToken(Exception):
 
 class RaiseOnErrorTokenFilter(Filter):
     """
-    Raise an ``pygments.filters.ErrorToken`` exception when the lexer
-    generates an error token.
+    Raise an exception when the lexer generates an error token.
+
+    Options accepted:
+
+    `excclass` : Exception class
+      The exception class to raise.
+      The default is `pygments.filters.ErrorToken`.
 
     *New in Pygments 0.8.*
     """
 
+    def __init__(self, **options):
+        Filter.__init__(self, **options)
+        self.exception = options.get('excclass', ErrorToken)
+        try:
+            # issubclass() will raise TypeError if first argument is not a class
+            if not issubclass(self.exception, Exception):
+                raise TypeError
+        except TypeError:
+            raise OptionError('excclass option is not an exception class')
+
     def filter(self, lexer, stream):
         for ttype, value in stream:
             if ttype is Error:
-                raise ErrorToken(value)
+                raise self.exception(value)
             yield ttype, value
+
+
+class VisibleWhitespaceFilter(Filter):
+    """
+    Convert tabs, newlines and/or spaces to visible characters.
+
+    Options accepted:
+
+    `spaces` : string or bool
+      If this is a one-character string, spaces will be replaces by this string.
+      If it is another true value, spaces will be replaced by ``·`` (unicode
+      MIDDLE DOT).  If it is a false value, spaces will not be replaced.  The
+      default is ``False``.
+    `tabs` : string or bool
+      The same as for `spaces`, but the default replacement character is ``»``
+      (unicode RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK).  The default value
+      is ``False``.  Note: this will not work if the `tabsize` option for the
+      lexer is nonzero, as tabs will already have been expanded then.
+    `tabsize` : int
+      If tabs are to be replaced by this filter, this is the total number of
+      characters that a tab should be expanded to.  The default is ``8``.
+    `newlines` : string or bool
+      The same as for `spaces`, but the default replacement character is ``¶``
+      (unicode PILCROW SIGN).  The default value is ``False``.
+    `wstokentype` : bool
+      If true, give whitespace the special `Whitespace` token type.  This allows
+      styling the visible whitespace differently (e.g. greyed out), but it can
+      disrupt background colors.  The default is ``True``
+
+    *New in Pygments 0.8.*
+    """
+
+    def __init__(self, **options):
+        Filter.__init__(self, **options)
+        for name, default in {'spaces': u'·', 'tabs': u'»', 'newlines': u'¶'}.items():
+            opt = options.get(name, False)
+            if isinstance(opt, basestring) and len(opt) == 1:
+                setattr(self, name, opt)
+            else:
+                setattr(self, name, (opt and default or ''))
+        tabsize = get_int_opt(options, 'tabsize', 8)
+        if self.tabs:
+            self.tabs += ' '*(tabsize-1)
+        if self.newlines:
+            self.newlines += '\n'
+        self.wstt = get_bool_opt(options, 'wstokentype', True)
+
+    def filter(self, lexer, stream):
+        if self.wstt:
+            spaces = self.spaces or ' '
+            tabs = self.tabs or '\t'
+            newlines = self.newlines or '\n'
+            regex = re.compile(r'\s')
+            def replacefunc(wschar):
+                if wschar == ' ':
+                    return spaces
+                elif wschar == '\t':
+                    return tabs
+                elif wschar == '\n':
+                    return newlines
+                return wschar
+
+            for ttype, value in stream:
+                for sttype, svalue in _replace_special(ttype, value, regex,
+                                                       Whitespace, replacefunc):
+                    yield sttype, svalue
+        else:
+            spaces, tabs, newlines = self.spaces, self.tabs, self.newlines
+            # simpler processing
+            for ttype, value in stream:
+                if spaces:
+                    value = value.replace(' ', spaces)
+                if tabs:
+                    value = value.replace('\t', tabs)
+                if newlines:
+                    value = value.replace('\n', newlines)
+                yield ttype, value
 
 
 FILTERS = {
@@ -171,4 +289,5 @@ FILTERS = {
     'keywordcase':    KeywordCaseFilter,
     'highlight':      NameHighlightFilter,
     'raiseonerror':   RaiseOnErrorTokenFilter,
+    'whitespace':     VisibleWhitespaceFilter,
 }
