@@ -13,7 +13,7 @@
 
 from pygments.style import Style
 from pygments.token import Keyword, Name, Comment, String, Error, \
-     Number, Operator, Generic
+     Number, Operator, Generic, Whitespace
 
 
 class PerldocStyle(Style):
@@ -25,6 +25,7 @@ class PerldocStyle(Style):
     default_style = ''
 
     styles = {
+        Whitespace:             '#bbbbbb',
         Comment:                '#228B22',
         Comment.Preproc:        '#1e889b',
         Comment.Special:        '#8B008B bold',
